# autojs6-typescript

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .typos.toml  AGENTS.md  LICENSE  README.md  biome.json  justfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: OPTIONS.md  RHINO_GOTCHAS.md
examples/broken/01-redeclaration/: README.md  main.js  main.ts
examples/broken/01-redeclaration/lib/: a.js  a.ts  b.js  b.ts  log.js  log.ts
examples/broken/02-exports-stamp/: README.md  main.js  main.ts
examples/broken/02-exports-stamp/lib/: config.js  config.ts
examples/broken/03-for-of/: README.md  main.js  main.ts
examples/broken/03-for-of/lib/: util.js  util.ts
examples/broken/04-java-string-coercion/: README.md  main.js  main.ts
examples/clean/: main.js  main.ts
examples/clean/lib/: greeter.js  greeter.ts  log.js  log.ts
src/: runtime-guard.js  runtime-guard.ts
tools/: check_build.py  check_require_bindings.py  find_errors.py  find_rhino_jar.py  install-deps.sh  print_rhino_version.py  rhino_check.py
types/: globals.d.ts
